2003-04-17  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/9555
	* include/bits/ostream.tcc: Catch all exceptions for formatted
	output, instead of std::exception and derivatives.
	* include/bits/istream.tcc: Same.
	* testsuite/27_io/basic_ostream/inserters_arithmetic/char/9555-oa.cc:
	* testsuite/27_io/basic_ostream/inserters_character/char/9555-oc.cc:
	* testsuite/27_io/basic_ostream/inserters_other/char/9555-oo.cc:
	* testsuite/27_io/basic_istream/extractors_arithmetic/char/9555-ia.cc:
	* testsuite/27_io/basic_istream/extractors_character/char/9555-ic.cc:
	* testsuite/27_io/basic_istream/extractors_other/char/9555-io.cc:
	New.

2003-04-17  Phil Edwards  <pme@gcc.gnu.org>

	* include/bits/c++config:  Minor cosmetic tweaks.

2003-04-17  Loren J. Rittle  <ljrittle@acm.org>

	* testsuite_flags.in (PCHFLAGS): Find PCH in new home.
	* include/Makefile.am (pch_input): Find in ${target_builddir}.
	(pch_output): Rename to...
	(pch_output_builddir): ..this.  Find in ${target_builddir}.
	(pch_source): Tweak.
	(pch_build): Key off a built file.
	(pch_output rule): Rename to...
	(pch_input rule): ...this.  Produce ${pch_output_builddir}
	instead of ${pch_output}.
	(install-pch rule): Install ${pch_output_builddir}.
	* include/Makefile.in: Regenerated.

2003-04-17  Paolo Carlini  <pcarlini@unitus.it>

	* include/std/std_streambuf.h (setp): _M_out_lim, being
	the end limit of used put area, is set equal to _M_out_beg.

2003-04-16  Benjamin Kosnik  <bkoz@redhat.com>

	* acinclude.m4 (GLIBCPP_CHECK_PCH): New.
	* aclocal.m4: Regenerated.
	* configure.in: Remove old demangler bits.
	Call pch checks.
	* configure: Regenerate.
	* config.h.in: Regenerate.
	* include/Makefile.am (allstamps): Now allstamped.
	(allcreated): Define this.
	(all-local): Use 'em.
	Conditionally define pch_build, pch_install based on
	GLIBCPP_BUILD_PCH.
	(${pch_output}): New rule.
	(install-pch): New rule.
	(install-headers): New rule.
	(install-data-local): Install headers and conditionally pch.