@@ -1,3 +1,8 @@
+2003-04-18  Loren J. Rittle  <ljrittle@acm.org>
+
+	* include/c_std/std_cmath.h (C99 FP capture): Only undefine said
+	C99 FP macros, if actually captured.
+
 2003-04-17  Benjamin Kosnik  <bkoz@redhat.com>
 
 	PR libstdc++/9555
